initial work for visualisation
